--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tooltip-advance",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "author": "Ashok Gupta",
@@ -16,20 +16,27 @@
     "url": "git@github.com:ashokapratitioner/react-tooltip-advance.git"
   },
   "scripts": {
-    "build": "webpack-dev-server --mode production",
+    "prepublish": "rm -rf ./dist && npm run build",
+    "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development"
   },
   "license": "ISC",
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "files": [
+    "dist"
+  ],
+  "peerDependencies": {
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.3",
+    "mini-css-extract-plugin": "^2.7.2",
     "node-sass": "^8.0.0",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
