library export using index

--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,15 @@
-webpack.config.js
+## the src folder
+src
 .babelrc
+webpack.config.js
+
+## node modules folder
+node_modules
+## incase you have a git repositiory initiated
+.git
 .gitignore
+.DS_Store
+npm-debug.log
+.npmrc
+
+package-lock.json
