--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tooltip-advance",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "author": "Ashok Gupta",
@@ -21,6 +21,10 @@
     "start": "webpack-dev-server --mode development"
   },
   "license": "ISC",
+  "files": [
+    "dist",
+    "src"
+  ],
   "peerDependencies": {
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0"
